Changes
=======

0.00013_01 24 Mar 2010
  * Added MultiLevel localizer that allows you to write a Rails-ish
    i18n: $loc->localize('my.key' => {arg => $value});
  * Fixed tests
  * BACKWARDS COMPAT BREAKING CHANGE!
    -> For Data::Localize::Localizer consumers only.
       End users should see no change.
    * Data::Localize::Localizer is no longer a role.
    * 'style' parameter has been deprecated
    * Message formatting is now pluggable.

0.00013 23 Mar 2010
  * Change all_* accessors back to what they were in 0.00011
  * Separate out BerkeleyDB tests, fix them
  * Namespace.pm no longer attempts to load files which failed to
    load previously. If you want to reflect changes, you need to
    recreate the object.
  * DEPRECATION WARNING!
    - Gettext.pm
        * path_add        -> add_path
        * lexicon_get     -> get_lexicon
        * lexicon_set     -> set_lexicon
        * lexicon_merge   -> merge_lexicon
        * lexicon_map_get -> get_lexicon_map
        * lexicon_map_set -> set_lexicon_map
    - Namespace.pm
        * lexicon_get     -> get_lexicon
    - Auto.pm
        * lexicon_get     -> get_lexicon

0.00012 22 Mar 2010
  * Remove the use of AttributeHelpers -- doing this in Moose/Mouse is a pain
  * Move POD tests to xt
  * Factor out Gettext parser (Dave Rolsky)
  * Only load Gettext lexicons for new paths in path_add (Dave Rolsky)
  * Protect $_ when loading Gettext lexicons (Dave Rolsky)
  * Predeclare class_type (Dave Rolsky)
  * Silence test Warnings (Dave Rolsky)

0.00011 15 Dec 2009
  * Don't attempt to load Namespace lexicons once we failed to load them.
  * Allow method calls for Maketext formats (UNTESTED -- will do more hacking)

0.00010 17 Aug 2009
  * Allow method calls to be made for Gettext formats. For example,
    %foo(1,2,3) will call $localizer->foo(undef, ['1', '2', '3']), and use
    its return value as the localized text (UNTESTED -- will do more hacking)

0.00009 05 Aug 2009