@@ -1,6 +1,11 @@
 Changes
 =======
 
+next
+  * The format method for all Formatters now received the language id as its
+    first argument. The auto localizer passes 'auto' as the language id. (Dave
+    Rolsky)
+
 0.00013_01 24 Mar 2010
   * Added MultiLevel localizer that allows you to write a Rails-ish
     i18n: $loc->localize('my.key' => {arg => $value});
